crates/pg_syntax/tests/snapshots/postgres_regress/float4@58.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '32767.6'::float4::int2;"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    TypeCast@7..30
      TypeCast@7..24
        AConst@7..16
          Sconst@7..16 "'32767.6'"
        Typecast@16..18 "::"
        TypeName@18..24
          Ident@18..24 "float4"
      Typecast@24..26 "::"
      TypeName@26..30
        Ident@26..30 "int2"
  Ascii59@30..31 ";"

